--- a/app/bin/css/styles.css
+++ b/app/bin/css/styles.css
@@ -89,14 +89,22 @@ you see classes below that have not been explicitly defined in the modules*/
   margin-top: 15px;
   margin-left: auto;
   margin-right: auto;
-  top: -110px; }
+  top: -130px;
+  bottom: -130px; }
+  #captainJake .caption {
+    position: relative;
+    top: -65px; }
+  #captainJake h3 {
+    margin-bottom: 20px; }
 
 #membersWrapper {
-  background: white; }
+  background: white;
+  margin-bottom: 70px;
+  padding: 0 15% 70px; }
 
 /*the Thumbnail component translates into the thumbnail class in regular bootstrap*/
 .thumbnail {
-  border: none;
+  border: 1px solid black;
   text-align: center; }
 
 #g1Backgrnd, #g2Backgrnd, #gXBackgrnd {
